added translations + grid

--- a/app/locale/en_US/Katai_Reports.csv
+++ b/app/locale/en_US/Katai_Reports.csv
@@ -1,3 +1,5 @@
 "Katai Advanced SQL Reporting","Katai Advanced SQL Reporting"
 "General","General"
-"Enabled","Enabled",
+"Enabled","Enabled"
+"Manage Reports","Manage Reports"
+"Add New Report","Add New Report"
