added back-end form administration

--- a/app/locale/en_US/Katai_Reports.csv
+++ b/app/locale/en_US/Katai_Reports.csv
@@ -3,3 +3,13 @@
 "Enabled","Enabled"
 "Manage Reports","Manage Reports"
 "Add New Report","Add New Report"
+"Overview Menu","Overview Menu"
+"New Report","New Report"
+"Overview Reports","Overview Reports"
+"Edit Report #%s","Edit Report #%s"
+"Edit Report","Edit Report"
+"Katai Report Information","Katai Report Information"
+"Store","Store"
+"Title","Title"
+"Is Active","Is Active"
+"Active","Active"
